--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -6,26 +6,25 @@
 {% endcomment %}
 
 {% block head %}
+  {% comment %} Feito com https://www.bestcssbuttongenerator.com/ {% endcomment %}
   <style>
     .myButton {
-      box-shadow:inset 0px 1px 0px 0px #f9eca0;
-      background:linear-gradient(to bottom, #f0c911 5%, #f2ab1e 100%);
-      background-color:#f0c911;
+      box-shadow:inset 0px 1px 0px 0px #f5978e;
+      background-color:#ff0000;
       border-radius:8px;
-      border:2px solid #e65f44;
+      border:1px solid #d02718;
       display:inline-block;
       cursor:pointer;
-      color:#c92200;
+      color:#ffffff;
       font-family:Arial;
       font-size:15px;
       font-weight:bold;
-      padding:4px 22px;
+      padding:7px 24px;
       text-decoration:none;
-      text-shadow:0px 1px 0px #ded17c;
+      text-shadow:0px 1px 0px #810e05;
     }
     .myButton:hover {
-      background:linear-gradient(to bottom, #f2ab1e 5%, #f0c911 100%);
-      background-color:#f2ab1e;
+      background-color:#c62d1f;
     }
     .myButton:active {
       position:relative;
