--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -188,6 +188,30 @@ table, th, td {
   padding-bottom: 0.25em;
 }
 
+/* Feito com https://www.bestcssbuttongenerator.com/ */
+.myButton {
+  box-shadow:inset 0px 1px 0px 0px #f5978e;
+  background-color:#ff0000;
+  border-radius:8px;
+  border:1px solid #d02718;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:15px;
+  font-weight:bold;
+  padding:7px 24px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #810e05;
+}
+.myButton:hover {
+  background-color:#c62d1f;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+
 @media only screen and (max-width: 740px) {
   .titulo {
     font-size: 21px;
