ajuste tamanho textos

--- a/templates/perfil_estudantes.html
+++ b/templates/perfil_estudantes.html
@@ -5,7 +5,7 @@
 {% endcomment %}
 
 {% if proposta %}
-  <h5>Perfil de Estudantes Esperados para Proposta de Projeto</h5>
+  <h5>Perfil de Estudantes Esperados</h5>
   <table>
     <tr>
         <th style="text-align:center; width:112px" >
