--- a/templates/prioridades.html
+++ b/templates/prioridades.html
@@ -8,7 +8,7 @@
 
 <br>
 <h5 style="margin-bottom: 0px;">Procura da Proposta</h5>
-<small>Quantidade de estudantes em cada opção para está proposta de projeto<br></small>
+<small>Quantidade de estudantes em cada opção para esta proposta:<br></small>
 <div class="container-fluid">
   <div class="row align-self-start" style="max-width: 800px">
     <div class="col">
