--- a/templates/proposta.html
+++ b/templates/proposta.html
@@ -12,7 +12,7 @@
         Título provisório para a proposta de projeto.
         Durante a execução do projeto o título poderá/deverá sofrer atualizações.
         ">
-            Título: {{proposta.titulo}}
+            <b>Título:</b> {{proposta.titulo}}
         </span>
     {% else %}
         <span class="titulo">Problema na identificação do título</span>
