--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -132,7 +132,7 @@
               <input type="submit" style="margin-right: 14px;" value="Enviar" {% if vencido or not liberadas_propostas %}disabled{% endif %}>
 
               <small style="float: right;"><font color="red">
-                Selecione ao menos 5 propostas de projetos (1 ao 5), sendo 1 para a que você tem mais interesse.
+                Selecione ao menos 5 propostas (1 a 5), sendo 1 para a que você tem mais interesse.
               </font></small>
               
             </div>
