--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -55,6 +55,16 @@
       {% endif %}
 
     {% endif %}
+
+    {% if not areas %}
+    <h5 class="text-warning">
+    Você ainda não selecionou nenhuma área de interesse, por favor, faça alguma seleção antes de confirmar os projetos desejados:
+    <a href="{% url 'areas_interesse' %}">
+      Áreas de Interesse
+    </a>
+    <br><br>
+    <h5>
+    {% endif %}
     
     <div class="row">
       <div class="col">
@@ -127,9 +137,10 @@
               {{warnings|linebreaks}}
             </font>
 
-            <div style="display: flex;">      
+            <small >Quando decidir os projetos desejados, clique em <b>Confirmar</b>. Você pode reconfirmar quantas vezes desejar até dia {{prazo}}.<br></small>
+            <div style="display: flex; margin-top: 8px;">      
               
-              <input type="submit" style="margin-right: 14px;" value="Enviar" {% if vencido or not liberadas_propostas %}disabled{% endif %}>
+              <input type="submit" style="margin-right: 14px;" value="Confirmar" {% if vencido or not liberadas_propostas or not areas %}disabled{% endif %}>
 
               <small style="float: right;"><font color="red">
                 Selecione ao menos 5 propostas (1 a 5), sendo 1 para a que você tem mais interesse.
