--- a/projetos/templates/projetos/analise_objetivos.html
+++ b/projetos/templates/projetos/analise_objetivos.html
@@ -130,7 +130,7 @@
                         legend: { display: false },
                         title: {
                             display: true,
-                            text: 'Médias Obtidas nos Objetivos de Aprendizagem'
+                            text: 'Médias Obtidas nos Objetivos de Aprendizagem [{{total_geral}} estudantes]'
                         },
                         scales: {
                             xAxes: [{
