--- a/projetos/templates/projetos/analise_notas.html
+++ b/projetos/templates/projetos/analise_notas.html
@@ -137,7 +137,7 @@
                     options: {
                         title: {
                             display: true,
-                            text: 'Médias Finais',
+                            text: 'Médias Finais [{{medias.total}} estudantes]',
                             position: 'top'
                         },
                         tooltips: tooltips,
