--- a/projetos/templates/projetos/analise_objetivos.html
+++ b/projetos/templates/projetos/analise_objetivos.html
@@ -14,7 +14,7 @@
   <script src="{% static 'js/w3.js' %}"></script>
   <script src="{% static 'js/Chart.min.js' %}"></script>
   <script src="{% static 'js/chartjs-plugin-datalabels.js' %}"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
+  <script src="{% static 'js/chartjs-plugin-annotation.min.js' %}"></script>
 
   {% comment %} Para chamar os Tooltips {% endcomment %}
   <script>{% include "tooltip.js" %}</script>
