--- a/templates/tabelas.html
+++ b/templates/tabelas.html
@@ -7,6 +7,7 @@
 
 {% comment %} SEPARADO EM DOIS ARQUIVOS AGORA {% endcomment %}
 
+{% comment %}
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.bootstrap4.min.css">
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
@@ -19,6 +20,22 @@
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.print.min.js"></script>
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.colVis.min.js"></script>
+{% endcomment %}
+
+
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'DataTables/DataTables-1.10.24/css/dataTables.bootstrap4.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'DataTables/Buttons-1.7.0/css/buttons.bootstrap4.min.css' %}">
+<script src="{% static 'DataTables/DataTables-1.10.24/js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'DataTables/DataTables-1.10.24/js/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'DataTables/Buttons-1.7.0/js/dataTables.buttons.min.js' %}"></script>
+<script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.bootstrap4.min.js' %}"></script>
+<script src="{% static 'js/jszip.min.js' %}"></script>
+<script src="{% static 'js/pdfmake.min.js' %}"></script>
+<script src="{% static 'js/vfs_fonts.js' %}"></script>
+<script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.html5.min.js' %}"></script>
+<script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.print.min.js' %}"></script>
+<script src="{% static 'DataTables/Buttons-1.7.0/js/buttons.colVis.min.js' %}"></script>
 
 
 <script type="text/javascript" class="init">
