--- a/organizacoes/templates/organizacoes/organizacao_completo.html
+++ b/organizacoes/templates/organizacoes/organizacao_completo.html
@@ -182,6 +182,9 @@
         <a href="{% url 'projeto_completo' projeto.id %}"> 
           <li>
             {{projeto.get_titulo}} ({{projeto.ano}}.{{projeto.semestre}})
+            {% if projeto.avancado %}
+              <strong style="color:red"><u>[Avançado]</u></strong><br>
+            {% endif %}
           </li>
         </a>
       {% endif %}
