--- a/professores/templates/professores/dinamicas_lista.html
+++ b/professores/templates/professores/dinamicas_lista.html
@@ -76,18 +76,12 @@
 
     <script>
       function carrega_pagina(){
-        {% include "edicoes_ajax.js" %}
       };
-      function recarregar_pagina(){
-        carrega_pagina();
-      }
+      window.onload = carrega_pagina
     </script>
 
   </div>
 
-  <script>
-    $(".filter").change(carrega_pagina);    
-    $(document).ready(carrega_pagina);
-  </script>  
+  {% include "edicoes_ajax.html" %}
 
 {% endblock %}
