--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -353,19 +353,17 @@
 
     <script>
       function carrega_pagina() {
-        {% include "edicoes_ajax.js" %}
       };
-      function recarregar_pagina(){
-        carrega_pagina();
-      }
+      window.onload = carrega_pagina
     </script>
 
   </div>
   <p>&nbsp;</p>
 
+  {% include "edicoes_ajax.html" %}
+
   <script>
-    $(".filter").change(carrega_pagina);    
-    $(document).ready(carrega_pagina);
+    recarregar_pagina();
   </script>
 
 {% endblock %}
