--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -21,7 +21,9 @@
   <span class="titulo">Estudantes</span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
-  {% include "edicoes.html" %}
+  {% with com_cursos=True %}
+    {% include "edicoes.html" %}
+  {% endwith %}
 
   <script>
     $('#filterEdicao').append($('<option>', {
@@ -350,21 +352,21 @@
     </script>
 
     <script>
-      function carrega_pagina(){
-        {% with tabela='Estudantes' %}
-          {% include "edicoes_ajax.js" %}
-        {% endwith %}
+      function carrega_pagina() {
       };
-      function recarregar_pagina(){
-        carrega_pagina();
-      }
+      window.onload = carrega_pagina
     </script>
 
   </div>
 
+  {% with tabela='Estudantes' %}
+    {% with com_cursos=True %}
+      {% include "edicoes_ajax.html" %}
+    {% endwith %}
+  {% endwith %}
+
   <script>
-    $(".filter").change(carrega_pagina);    
-    $(document).ready(carrega_pagina);
-  </script>  
+    recarregar_pagina();
+  </script>
 
 {% endblock %}
