--- a/users/templates/users/estudantes_notas.html
+++ b/users/templates/users/estudantes_notas.html
@@ -197,24 +197,21 @@
     {% endif %}
 
     <script>
-      function carrega_pagina(){
-        {% comment %} {% with media=4 %} {% endcomment %}
-          {% with tabela='Estudantes' %}
-            {% include "edicoes_ajax.js" %}
-          {% endwith %}
-        {% comment %} {% endwith %} {% endcomment %}
+      function carrega_pagina() {
       };
-      function recarregar_pagina(){
-        carrega_pagina();
-      }
+      window.onload = carrega_pagina
     </script>
 
   </div>
 
-  <script>
-    $(".filter").change(carrega_pagina);    
-    //$(document).ready(carrega_pagina);
-    window.onload = carrega_pagina
-  </script>  
+  {% comment %} {% with media=4 %} {% endcomment %}
+    {% with tabela='Estudantes' %}
+      {% include "edicoes_ajax.html" %}
+    {% endwith %}
+  {% comment %} {% endwith %} {% endcomment %}
   
+  <script>
+    recarregar_pagina();
+  </script>
+
 {% endblock %}
