--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -24,6 +24,6 @@
     <a href="{% url 'montar_grupos' %}"><h5>Montar Grupos para Projetos</h5></a>
     <a href="{% url 'propor' %}"><h5>Propor Grupos para Projetos</h5></a>
     <a href="{% url 'index_carregar' %}"><h5>Carregar dados</h5></a>
-    <a href="{% url 'conexoes_estabelecidas' %}"><h5>Conexoes Estabelecidas</h5></a>
+    <a href="{% url 'conexoes_estabelecidas' %}"><h5>Usuários Conectados</h5></a>
 
 {% endblock %}
