seleção de certificados a serem gerados

--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -35,7 +35,7 @@
   {% include "edicoes.html" %}
 
   &nbsp;&nbsp;&nbsp;
-  <b>Informações: </b>&nbsp;
+  <b>Tipos: </b>&nbsp;
   <label><input id="estudantes" onchange="($(this).prop('checked') ? $('.estudantes').show() : $('.estudantes').hide())" type="checkbox" checked /> Estudantes</label>&nbsp;&nbsp;&nbsp;
   <label><input id="orientador" onchange="($(this).prop('checked') ? $('.orientador').show() : $('.orientador').hide())" type="checkbox" checked /> Orientadores</label>&nbsp;&nbsp;&nbsp;
   <label><input id="coorientador" onchange="($(this).prop('checked') ? $('.coorientador').show() : $('.coorientador').hide())" type="checkbox" checked /> Coorientadores</label>&nbsp;&nbsp;&nbsp;
