--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -34,7 +34,7 @@
     <h5>Certificados</h5>
     <ul>
         <a href="{% url 'certificados_submetidos' %}"><li>Listar Certificados</li></a>
-        <a href="{% url 'gerar_certificados' %}"><li>Gerar Novos</li></a>
+        <a href="{% url 'selecao_geracao_certificados' %}"><li>Gerar Novos</li></a>
     </ul>
 
     <hr>
