--- a/administracao/templates/administracao/exportar.html
+++ b/administracao/templates/administracao/exportar.html
@@ -7,9 +7,7 @@
 
 {% block content %}
 
-    <span class="titulo">Relatórios</span>
-    <br>
-
+    <span class="titulo">Exportar Relatórios</span>
     <table>
         <tr>
             <td>Projetos</td>
@@ -27,14 +25,14 @@
             <td><a href="{% url 'relatorio' 'feedbacks' 'PDF'%}">PDF</a></td>
         </tr>
     </table>
-    <a href="{% url 'relatorio_backup'%}">Envia e-mail com todos os relatórios</a>
+    {% if user.tipo_de_usuario == 4 %}
+        <a href="{% url 'relatorio_backup'%}">Envia e-mail com todos os relatórios</a>
+    {% endif %}
     <br>
     <br>
     <br>
 
     <span class="titulo">Exportar dados</span>
-    <br>
-
     <table>
         <tr>
             <td>Tudo</td>
@@ -98,9 +96,11 @@
             <td><a href="{% url 'export' 'feedbacks' 'json'%}">JSON</a></td>
         </tr>
 
-
     </table>
-    <a href="{% url 'email_backup'%}">Envia e-mail com todos os backups</a>
+    {% if user.tipo_de_usuario == 4 %}
+        <a href="{% url 'email_backup'%}">Envia e-mail com todos os backups</a>
+    {% endif %}
     <br>
     <br>
+
 {% endblock %}
