--- a/calendario/templates/calendario/calendario.html
+++ b/calendario/templates/calendario/calendario.html
@@ -337,7 +337,7 @@
                   <h5 class="modal-title">Evento</h5>
                   {% if user.tipo_de_usuario != 4 %}
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <span id="permissao" style="color:red; text-decoration: underline solid red">Restrito a Administrador</span>
+                    <span id="permissao" style="color:red; text-decoration: underline solid red">Alterações Restritas ao Administrador</span>
                   {% endif %}
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
