carrega PDF de formulário

--- a/organizacoes/templates/organizacoes/index_organizacoes.html
+++ b/organizacoes/templates/organizacoes/index_organizacoes.html
@@ -10,6 +10,7 @@
     <h5>Propostas</h5>
     <ul>
         <a href="{% url 'proposta_submissao' %}"><li>Submeter Proposta de Projeto</li></a>
+        <a href="{% url 'carrega_proposta' %}"><li>Carrega Proposta de Projeto em PDF</li></a>
         <a href="{% url 'parceiro_propostas' %}"><li>Propostas Submetidas</li></a>
     </ul>
 
