--- a/projetos/templates/index_projetos.html
+++ b/projetos/templates/index_projetos.html
@@ -13,7 +13,11 @@
     <h5>Projetos Fechados</h5>
     <ul>
         <a href="{% url 'projetos_fechados' %}"><li>Listagem Geral</li></a>
-        <a href="{% url 'projetos_vs_propostas' %}"><li>Projetos vs Propostas</li></a>
+    </ul>
+
+    <h5>Análises</h5>
+    <ul>
+        <a href="{% url 'projetos_vs_propostas' %}"><li>Organizações, Projetos e Propostas</li></a>
     </ul>
 
 {% endblock %}
