busca de dados asincrona

--- a/projetos/templates/index_projetos.html
+++ b/projetos/templates/index_projetos.html
@@ -10,7 +10,7 @@
 
 {% block content %}
 
-    <h5>Projetos Fechados</h5>
+    <h5>Projetos</h5>
     <ul>
         <a href="{% url 'projetos_fechados' %}"><li>Listagem Geral</li></a>
     </ul>
