--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -27,7 +27,7 @@
 
   {% include "impressora.html" %}
 
-  <span class="titulo">Projetos Fechados</span><br>
+  <span class="titulo">Projetos</span><br>
   
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
@@ -354,16 +354,12 @@
     <script>
       function carrega_pagina() {
       };
-      window.onload = carrega_pagina
+      $(document).ready(carrega_pagina);
     </script>
-
+    
   </div>
   <p>&nbsp;</p>
 
   {% include "edicoes_ajax.html" %}
-
-  <script>
-    recarregar_pagina();
-  </script>
 
 {% endblock %}
